--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hevin.dev - Freelance Web Design & Development in [Your City]</title>
+    <title>Hevin Design - Freelance Web Design & Development in [Your City]</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div class="header-container">
             <button id="menu-toggle" class="hamburger">☰</button>
-            <h1>hevin.dev</h1>
+            <h1>Hevin Design</h1>
         </div>
         <nav id="nav-menu">
             <a href="#services">Services</a>
@@ -131,8 +131,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 hevin.dev. All rights reserved.</p>
-        <p>Email: info@hevin.dev | Phone: (123) 456-7890 | Location: [Your City]</p>
+        <p>&copy; 2025 hevin.design. All rights reserved.</p>
+        <p>Email: info@hevin.design | Phone: (123) 456-7890 | Location: Sydney, NSW</p>
     </footer>
 
     <script>
