--- a/index.html
+++ b/index.html
@@ -68,12 +68,16 @@
                 <p>Improve your search engine rankings with our on-page SEO services.</p>
             </li>
             <li>
-                <h3>E-commerce Solutions</h3>
-                <p>Build robust online stores with secure payment gateways.</p>
+                <h3>Google Business</h3>
+                <p>Enable customers to find you more easily on the biggest search engine on the web.</p>
             </li>
             <li>
                 <h3>Digital Branding</h3>
                 <p>Craft successful brands and experiences with strategic design and marketing.</p>
+            </li>
+            <li>
+                <h3>24/7 Support</h3>
+                <p>Reciever around the clock support for a fraction of the price of competitors</p>
             </li>
         </ul>
     </section>
